ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodorder-dev
  annotations:
   kubernetes.io/ingress.class: azure/application-gateway
  labels:
    name: foodorder-dev
spec:
  rules:
  - host: foodorder-dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foodorder-dev
            port: 
              number: 3000
